--- a/templates/index.html
+++ b/templates/index.html
@@ -2,29 +2,89 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<link href = "/static/css/styles.css" rel = "stylesheet" type="text/css" media="all">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="/static/css/styles.css" rel="stylesheet" type="text/css" media="all">
     <title>{{title}}</title>
 </head>
 <body>
-	<header>
-    	<nav>
+<header>
+    <nav class="navbar navbar-dark bg-dark">
         {% if current_user.is_authenticated %}
-        <a style="color: white; text-decoration: none; font-size: 25px" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
+        <a class="navbar-brand" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
         {% endif %}
-        <a style="color: white; text-decoration: none; font-size: 25px; margin-left: 10px" href="/solutions">Решения</a>
+        <a class="navbar-brand" href="/solutions">Решения</a>
         {% if current_user.is_authenticated %}
-        <a style="color: white; text-decoration: none; font-size: 25px; margin-left: 10px" href="/logout">Выйти</a>
+        <a class="navbar-brand" href="/logout">Выйти</a>
         {% endif %}
     </nav>
-	</header>
+</header>
 
-	<h1 style="color: white; margin-top: 10px; margin-left: 500px">Главная страница</h1>
-    <div id="login"><a style="font-size: 22px; text-decoration: none; color: black; font-weight: bold" href="{{ url_for('login') }}">ВОЙТИ</a></div>
-    <div id="contests"><a style="font-size: 17px; text-decoration: none; color: black; font-weight: bold" href="{{ url_for('contests') }}">КОНТЕСТЫ</a></div>
-    <div id="register"><a style="font-size: 33px; text-decoration: none; color: black; font-weight: bold" href="{{ url_for('register') }}">ЗАРЕГИСТРИРОВАТЬСЯ</a></div>
-    <div id="leaderboard"><a style="font-size: 16px; text-decoration: none; color: black; font-weight: bold" href="{{ url_for('leaderboard') }}">ТАБЛИЦА ЛИДЕРОВ</a></div>
-    <div id="logout"><a style="font-size: 28px; text-decoration: none; color: black; font-weight: bold" href="{{ url_for('logout') }}">ВЫЙТИ</a></div>
-
+<div class="container">
+    <h1 class="mt-5">Главная страница</h1>
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">ВОЙТИ</h5>
+                    <a href="{{ url_for('login') }}" class="btn btn-primary stretched-link">Перейти</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">КОНТЕСТЫ</h5>
+                    <a href="{{ url_for('contests') }}" class="btn btn-primary stretched-link">Перейти</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">ЗАРЕГИСТРИРОВАТЬСЯ</h5>
+                    <a href="{{ url_for('register') }}" class="btn btn-primary stretched-link">Перейти</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">ТАБЛИЦА ЛИДЕРОВ</h5>
+                    <a href="{{ url_for('leaderboard') }}" class="btn btn-primary stretched-link">Перейти</a>
+                </div>
+            </div>
+        </div>
+        {% if current_user.is_authenticated %}
+        <div class="col-sm-6 col-md-4">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">ВЫЙТИ</h5>
+                    <a href="{{ url_for('logout') }}" class="btn btn-primary">Выйти</a>
+                </div>
+            </div>
+        </div>
+        {% else %}
+        <div class="col-sm-6 col-md-4">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">ВОЙТИ</h5>
+                    <a href="{{ url_for('login') }}" class="btn btn-primary">Войти</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">ЗАРЕГИСТРИРОВАТЬСЯ</h5>
+                    <a href="{{ url_for('register') }}" class="btn btn-primary">Зарегистрироваться</a>
+                </div>
+            </div>
+        </div>
+        {% endif %}
+    </div>
+</div>
 
 </body>
 </html>
