--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -2,37 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<link href = "/static/css/leaderboard.css" rel = "stylesheet" type="text/css" media="all">
+
     <title>{{title}}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="/static/css/leaderboard.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-    <header>
-    	<nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         {% if current_user.is_authenticated %}
-        <a style="color: white; text-decoration: none; font-size: 20px" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
+        <a class="navbar-brand" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
         {% else %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/register">Зарегистрироваться</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/login">Войти</a>
+        <a class="navbar-brand" href="/register">Зарегистрироваться</a>
+        <a class="navbar-brand" href="/login">Войти</a>
         {% endif %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/">Главная страница</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/solutions">Решения</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/logout">Выйти</a>
-        </nav>
-	</header>
-
-    <h1 id="title">Таблица лидеров</h1>
+        <a class="navbar-brand" href="/">Главная страница</a>
+        <a class="navbar-brand" href="/solutions">Решения</a>
+        <a class="navbar-brand" href="/logout">Выйти</a>
+    </nav>
+<div class="container mt-5">
+    <h1 class="text-center mb-5">Таблица лидеров</h1>
     {% for user in users %}
-    <div class="table">
-        <h2>{{user.name}}</h2>
-        <div style="margin-left: 150px">
-            <p style="font-size: 50px; margin-top: -50px; margin-bottom: -10px; font-weight: bold">{{user.score}}</p>
-        </div>
-        <div>
-            <a style="font-size: 20px; text-decoration: none; color: black; font-weight: bold" href="/user/{{ user.id }}">
-                Профиль
-            </a>
+    <div class="card mb-3">
+        <div class="card-body">
+            <h2 class="card-title">{{user.name}}</h2>
+            <p class="card-text" style="font-size: 50px; font-weight: bold">{{user.score}}</p>
+            <a href="/user/{{ user.id }}" class="btn btn-primary">Профиль</a>
         </div>
     </div>
     {% endfor %}
+</div>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
