--- a/templates/login.html
+++ b/templates/login.html
@@ -2,47 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<link href = "/static/css/register.css" rel = "stylesheet" type="text/css" media="all">
     <title>{{title}}</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/login.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-    <header>
-        <nav>
-        {% if current_user.is_authenticated %}
-        <a style="color: white; text-decoration: none; font-size: 20px" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
-        {% else %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/register">Зарегистрироваться</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/login">Войти</a>
-        {% endif %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/">Главная страница</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/solutions">Решения</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/logout">Выйти</a>
+    <header class="bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark">
+            {% if current_user.is_authenticated %}
+            <a class="navbar-brand" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
+            {% else %}
+            <a class="navbar-brand" href="/register">Зарегистрироваться</a>
+            <a class="navbar-brand" href="/login">Войти</a>
+            {% endif %}
+            <a class="navbar-brand" href="/">Главная страница</a>
+            <a class="navbar-brand" href="/solutions">Решения</a>
+            <a class="navbar-brand" href="/logout">Выйти</a>
         </nav>
     </header>
-<h1 style="color: white; margin-left: 200px">Авторизация</h1>
-<form action="" method="post">
-    {{ form.hidden_tag() }}
-    <p style="color: white; margin-left: 200px; margin-top: 50px;">
-        {{ form.email.label }}<br>
-        {{ form.email(class="form-control", type="email") }}<br>
-        {% for error in form.email.errors %}
-    <div>
-        {{ error }}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h1 class="text-center mb-4 text-white">Авторизация</h1>
+                <form action="" method="post">
+                    {{ form.hidden_tag() }}
+                    <div class="form-group">
+                        {{ form.email.label }}
+                        {{ form.email(class="form-control", type="email") }}
+                        {% for error in form.email.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.password.label }}
+                        {{ form.password(class="form-control", type="password") }}
+                        {% for error in form.password.errors %}
+                            <div class="invalid-feedback">{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                    <div class="form-group">
+                        <div class="form-check">
+                            {{ form.remember_me() }}
+                            {{ form.remember_me.label }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        {{ form.submit(class="btn btn-primary btn-block") }}
+                    </div>
+                    <div class="text-white text-center">
+                        {{ message }}
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-    {% endfor %}
-    </p>
-    <p style="color: white; margin-left: 200px; margin-top: 50px;">
-        {{ form.password.label }}<br>
-        {{ form.password(class="form-control", type="password") }}<br>
-        {% for error in form.password.errors %}
-    <div>
-        {{ error }}
-    </div>
-    {% endfor %}
-    </p>
-    <p style="color: white; margin-left: 200px; margin-top: 50px;">{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-    <p style="margin-left: 260px; margin-top: 50px;">{{ form.submit(type="submit") }}</p>
-    <div>{{ message }}</div>
-</form>
 </body>
 </html>
