--- a/templates/register.html
+++ b/templates/register.html
@@ -2,64 +2,92 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<link href = "/static/css/register.css" rel = "stylesheet" type="text/css" media="all">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="/static/css/register.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-    <header>
-        <nav>
-        {% if current_user.is_authenticated %}
-        <a style="color: white; text-decoration: none; font-size: 20px" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
-        {% else %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/register">Зарегистрироваться</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/login">Войти</a>
-        {% endif %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/">Главная страница</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/solutions">Решения</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/logout">Выйти</a>
-        </nav>
-    </header>
-<h1 style="color: white; margin-left: 200px">Регистрация</h1>
-<form action="" method="post">
-    {{ form.hidden_tag() }}
-    <p style="color: white; margin-left: 200px; margin-top: 50px;">
-        {{ form.email.label }}<br>
-        {{ form.email(type="email") }}<br>
-        {% for error in form.email.errors %}
-            <p>
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p style="color: white; margin-left: 200px; margin-top: 50px;">
-        {{ form.password.label }}<br>
-        {{ form.password(type="password") }}<br>
-        {% for error in form.password.errors %}
-            <p>
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p style="color: white; margin-left: 200px; margin-top: 50px;">
-        {{ form.password_again.label }}<br>
-        {{ form.password_again(type="password") }}<br>
-        {% for error in form.password_again.errors %}
-            <p>
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p style="color: white; margin-left: 200px; margin-top: 50px;">
-        {{ form.name.label }}<br>
-        {{ form.name() }}<br>
-        {% for error in form.name.errors %}
-            <p>
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p style="margin-left: 260px; margin-top: 50px;">{{ form.submit(type="submit") }}</p>
-    {{message}}
-</form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Главная страница</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/solutions">Решения</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Выйти</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/register">Зарегистрироваться</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Войти</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container mt-4">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h1 class="text-center mb-4">Регистрация</h1>
+                <form method="post">
+                    {{ form.hidden_tag() }}
+                    <div class="form-group">
+                        {{ form.email.label }}
+                        {{ form.email(type="email", class="form-control") }}
+                        {% for error in form.email.errors %}
+                            <div class="invalid-feedback">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.password.label }}
+                        {{ form.password(type="password", class="form-control") }}
+                        {% for error in form.password.errors %}
+                            <div class="invalid-feedback">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.password_again.label }}
+                        {{ form.password_again(type="password", class="form-control") }}
+                        {% for error in form.password_again.errors %}
+                            <div class="invalid-feedback">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.name.label }}
+                        {{ form.name(class="form-control") }}
+                        {% for error in form.name.errors %}
+                            <div class="invalid-feedback">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block mt-4">{{ form.submit.label }}</button>
+                    {{ message }}
+                </form>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
+
