--- a/templates/solution.html
+++ b/templates/solution.html
@@ -2,29 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<link href = "/static/css/solutions.css" rel = "stylesheet" type="text/css" media="all">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Custom CSS -->
+
 </head>
 <body>
     <header>
-        <nav>
-        {% if current_user.is_authenticated %}
-        <a style="color: white; text-decoration: none; font-size: 20px" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
-        {% else %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/register">Зарегистрироваться</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/login">Войти</a>
-        {% endif %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/">Главная страница</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/solutions">Решения</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/logout">Выйти</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            {% if current_user.is_authenticated %}
+                <a class="navbar-brand" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
+            {% else %}
+                <a class="navbar-brand" href="/register">Зарегистрироваться</a>
+                <a class="navbar-brand" href="/login">Войти</a>
+            {% endif %}
+            <a class="navbar-brand" href="/">Главная страница</a>
+            <a class="navbar-brand" href="/solutions">Решения</a>
+            {% if current_user.is_authenticated %}
+                <a class="navbar-brand" href="/logout">Выйти</a>
+            {% endif %}
         </nav>
     </header>
-<div id="main">
-	<h1>{{ solution.id }}</h1>
-	<h2>Вердикт</h2>
-	<p>{{ solution.verdict }}</p>
-	<h2>Дата отправки</h2>
-	<p>{{ solution.created_date }}</p>
-</div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-center">{{ solution.id }}</h1>
+                <hr>
+                <h2>Вердикт</h2>
+                <p>{{ solution.verdict }}</p>
+                <h2>Дата отправки</h2>
+                <p>{{ solution.created_date }}</p>
+            </div>
+        </div>
+    </div>
+    <!-- Bootstrap JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
