--- a/templates/task.html
+++ b/templates/task.html
@@ -2,42 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<link href = "/static/css/task.css" rel = "stylesheet" type="text/css" media="all">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<header>
-    <nav>
-        {% if current_user.is_authenticated %}
-        <a style="color: white; text-decoration: none; font-size: 20px" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
+<header class="bg-dark">
+	<nav class="container py-3">
+		{% if current_user.is_authenticated %}
+        <a class="text-white me-3" href="/user/{{ current_user.id }}">{{ current_user.name }}</a>
         {% else %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/register">Зарегистрироваться</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/login">Войти</a>
+        <a class="text-white me-3" href="/register">Зарегистрироваться</a>
+        <a class="text-white me-3" href="/login">Войти</a>
         {% endif %}
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/">Главная страница</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/solutions">Решения</a>
-        <a style="color: white; text-decoration: none; font-size: 20px; margin-left: 10px" href="/logout">Выйти</a>
+        <a class="text-white me-3" href="/">Главная страница</a>
+        <a class="text-white me-3" href="/solutions">Решения</a>
+        <a class="text-white me-3" href="/logout">Выйти</a>
     </nav>
 </header>
-<div id="main">
-	<h1>{{ task.id }}. {{ task.title }}</h1>
-	<p>{{ task.description }}</p>
-	<h2>Формат ввода</h2>
-	<p>{{ task.input_format }}</p>
-	<h2>Формат вывода</h2>
-	<p>{{ task.output_format }}</p>
-	<h2>Пример</h2>
-	<h3>Ввод</h3>
-	<p>{{ task.input_example }}</p>
-	<h3>Вывод</h3>
-	<p>{{ task.output_example }}</p>
-	<h2>Сдать решение</h2>
+<main class="container py-5">
+	<h1 class="mb-5">{{ task.id }}. {{ task.title }}</h1>
+	<p class="mb-5">{{ task.description }}</p>
+	<h2 class="mb-3">Формат ввода</h2>
+	<p class="mb-5">{{ task.input_format }}</p>
+	<h2 class="mb-3">Формат вывода</h2>
+	<p class="mb-5">{{ task.output_format }}</p>
+	<h2 class="mb-3">Пример</h2>
+	<h3 class="mb-2">Ввод</h3>
+	<p class="mb-4">{{ task.input_example }}</p>
+	<h3 class="mb-2">Вывод</h3>
+	<p class="mb-5">{{ task.output_example }}</p>
+	<h2 class="mb-3">Сдать решение</h2>
 	<form method="post" enctype="multipart/form-data">
-		<div>
-		<input type="file" name="file">
+		<div class="mb-3">
+			<input class="form-control" type="file" name="file">
 		</div>
-		<button type="submit">Отправить</button>
+		<button class="btn btn-primary" type="submit">Отправить</button>
 	</form>
-</div>
+</main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
