--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,5 +1,60 @@
-body{
-    background-image: url("register.jpg");
+/* Шрифт и цвет текста */
+body {
+  font-family: Arial, sans-serif;
+  color: black;
+}
 
-    background-position: top;
+/* Цвет фона */
+body, nav {
+  background-color: white;
+}
+
+/* Цвет текста в навбаре */
+.navbar-brand, .nav-link {
+  color: black;
+}
+
+/* Цвет ссылок */
+a {
+  color: yellow;
+}
+
+/* Стиль кнопки */
+.btn-primary {
+  background-color: yellow;
+  border-color: yellow;
+}
+
+/* Стиль формы */
+form {
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+/* Стиль заголовка */
+h1 {
+  color: black;
+}
+
+/* Стиль сообщения об ошибке */
+.invalid-feedback {
+  color: yellow;
+}
+
+/* Стиль инпутов */
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  border: none;
+  border-bottom: 2px solid black;
+  background-color: white;
+  color: black;
+  margin-bottom: 20px;
+}
+
+/* Стиль кнопки отправки */
+button[type="submit"] {
+  background-color: black;
+  border-color: black;
 }
