--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,31 +1,96 @@
-body{
-    background-image: url("index_for_buttons.jpg");
-    background-repeat: no-repeat;
-
-    background-position: top;
+/* Удаляем отступы по умолчанию */
+body {
+  margin: 0;
+  padding: 0;
 }
 
-#login{
-    margin-top: 260px;
-    margin-left: 948px;
+/* Создаем контейнер Bootstrap */
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
-#contests{
-    margin-top: 45px;
-    margin-left: 86px;
+/* Удаляем стили по умолчанию для заголовков */
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
 }
 
-#register{
-    margin-top: 103px;
-    margin-left: 350px;
+/* Стилизуем навигационное меню */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  padding: 10px;
 }
 
-#leaderboard{
-    margin-top: -95px;
-    margin-left: 865px;
+nav a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  margin-left: 10px;
 }
 
-#logout{
-    margin-top: -218px;
-    margin-left: 915px;
+/* Стилизуем кнопки */
+.btn {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  transition: all 0.15s ease-in-out;
 }
+
+.btn-primary {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: #0069d9;
+  border-color: #0062cc;
+}
+
+/* Стилизуем контент */
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+.content h1 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+.content a {
+  margin-top: 1rem;
+}
+
+/* Медиазапросы для адаптивности */
+@media (max-width: 576px) {
+  nav a {
+    font-size: 16px;
+    margin-left: 5px;
+  }
+
+  .content h1 {
+    font-size: 2rem;
+  }
+}
+
